kubernetes/apps/observability/netdata/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schema.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netdata
spec:
  hostnames:
    - "netdata.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: netdata
          port: 19999
